# thegame

./: README.md
core/: Cargo.toml
core/src/: abs_diff_eq.rs  board.rs  card.rs  deck.rs  discard_pile.rs  game.rs  hand.rs  lib.rs  player.rs
server/: Cargo.toml
server/src/: main.rs  messages.rs  protocol.rs  room.rs  server.rs  session.rs
server/src/handlers/: connect.rs  create_room.rs  discard.rs  disconnect.rs  end_turn.rs  join.rs  mod.rs  start.rs
