[package]
name = "the_game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.1.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
the_game_core = { path = "../core" }
linked_hash_set = "0.1.4"
